# pathfinding-simulator

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile.in  Makefile  README.md
.github/workflows/: ci.yml
include/maze/: maze.hpp  maze.tpp
include/maze/algorithms/: generation.tpp  pathfinding.tpp
include/maze/core/: cell.hpp  cell_metadata.hpp  direction.hpp  graph_cell.hpp
include/maze/ui/: app.hpp
scripts/: demo.tape
src/: cell.cpp  main.cpp
src/ui/: app.cpp
tests/: test_cell.cpp  test_generation.cpp  test_maze.cpp  test_pathfinding.cpp
